<resources>
    <string name="left_direction">0</string>
    <string name="right_direction">180</string>
    <string name="running_state">开机状态</string>
    <string name="stopped_state">关机状态</string>
    <string name="fault_state">故障状态</string>
    <string name="locked_state">锁定状态</string>
    <string name="first_fragment_label">first_fragment_label</string>
    <string name="second_fragment_label">second_fragment_label</string>
    <string name="hello_first_fragment">hello_first_fragment</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="app_name">printer</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="action_settings">Settings</string>
    <string name="start_scan">查找附近设备</string>
    <string name="stop_scan">停止查找</string>
    <string name="mac_address">MAC: %s</string>
    <string name="connection_state">State: %s</string>
    <string name="read_rssi">RSSI: %d</string>
    <string name="prefix_hex">0x</string>
    <string name="disconnect">断开连接</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="setup_notification">Register notifications</string>
    <string name="setting_notification">Setting up notifications…</string>
    <string name="teardown_notification">Disable notifications</string>
    <string name="setup_indication">Register indications</string>
    <string name="setting_indication">Setting up indications…</string>
    <string name="teardown_indication">Disable indications</string>
    <string name="notify_indicate_compat_warning">NOTIFY &amp; INDICATE COMPATIBILITY MODE ONLY</string>
    <string name="title_example1">Example RxAndroidBle usage</string>
    <string name="title_example2">Connection &amp; connection state</string>
    <string name="title_example3">Service discovery</string>
    <string name="title_example4">Characteristic operations</string>
    <string name="not_clickable">No action</string>
    <string name="write_input">Write input</string>
    <string name="scan_in_background">Scan in background</string>
    <string name="error_bluetooth_not_available">Bluetooth is not available</string>
    <string name="error_bluetooth_disabled">Enable bluetooth and try again</string>
    <string name="error_location_permission_missing">BLE TOOL需要打开位置服务,请打开！</string>
    <string name="error_location_services_disabled">Location services need to be enabled on Android 6.0</string>
    <string name="error_scan_failed_already_started">Scan with the same filters is already started</string>
    <string name="error_scan_failed_application_registration_failed">Failed to register application for bluetooth scan
    </string>
    <string name="error_scan_failed_feature_unsupported">Scan with specified parameters is not supported</string>
    <string name="error_scan_failed_internal_error">Scan failed due to internal error</string>
    <string name="error_scan_failed_out_of_hardware_resources">Scan cannot start due to limited hardware resources
    </string>
    <string name="error_undocumented_scan_throttle">Android 7+ does not allow more scans.</string>
    <string name="error_undocumented_scan_throttle_retry">Try in %d seconds</string>
    <string name="error_bluetooth_cannot_start">Unable to start scanning</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="title_activity_info">关于</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dfu_success">Application has been transferred successfully.</string>
    <string name="dfu_aborted">Uploading of the application has been canceled.</string>
    <string name="channel_connected_devices_title">Background connections</string>
    <string name="channel_connected_devices_description">Shows a notification when a device is connected in
        background.
    </string>
    <string name="channel_files_title">Files</string>
    <string name="channel_files_description">Shows notifications when new files has been saved.</string>
    <string name="channel_proximity_warnings_title">Proximity warnings</string>
    <string name="channel_proximity_warnings_description">Shows notifications when a proximity device got out of
        range.
    </string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="downloading">Downloading package…</string>
    <string name="get_help">帮助说明</string>
    <string name="get_version">版本信息</string>
    <string name="qrcode_text">扫码连接</string>
    <string name="scan_text">查找附近设备</string>
    <string name="dfu_status_no_update">当前为最新版本</string>
    <string name="dfu_status_checking">检查更新...</string>
    <string name="dfu_status_check_failed">检查更新失败</string>
    <string name="dfu_action_update">开始升级</string>
    <string name="dfu_action_updated">升级完成</string>
    <string name="dfu_action_updating">正在升级</string>
    <string name="dfu_action_update_failed">升级失败</string>
    <string name="dfu_action_check">检查更新</string>
    <string name="date_format">选择日期格式</string>
    <string name="date_adjust">选择要偏移的项目</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="date_specify">指定日期</string>
    <string name="record01">已存任务01</string>
    <string name="record02">已存任务02</string>
    <string name="record03">已存任务03</string>
    <string name="load">读取</string>
    <string name="save">保存</string>
    <string name="font_size_label">字体大小:</string>
    <string name="text">文字</string>
    <string name="time">实时时间</string>
    <string name="date">日期</string>
    <string name="picture">图案</string>
    <string name="space">空格</string>
    <string name="newline">换行</string>
    <string name="backspace">退格删除</string>
    <string name="deleteText">删除文字</string>
    <string name="clear_picture">删除图案</string>
    <string name="send_to_printer">发送至打印机</string>
    <string name="printer_name">打印机名称</string>
    <string name="product_line">生产线编号</string>
    <string name="factory_no">工厂编号</string>
    <string name="resistance">电阻值</string>
    <string name="serial_number">序列号</string>
    <string name="firmware">固件版本</string>
    <string name="dfu">固件升级</string>
    <string name="printer_control">打印机控制</string>
    <string name="print_content">打印内容编辑</string>
    <string name="go_online">开机</string>
    <string name="go_offline">关机</string>
    <string name="test_print">测试打印</string>
    <string name="current_print_count">本次印数</string>
    <string name="print_count">总印数</string>
    <string name="pack_per_minus">包/每分钟</string>
    <string name="print_settings">打印设置</string>
    <string name="device_info">设备信息</string>
    <string name="print_temp">打印温度</string>
    <string name="print_press">打印压力</string>
    <string name="print_direction">打印方向</string>
    <string name="print_delay">打印延时</string>
    <string name="print_position">打印位置</string>
    <string name="language">语言</string>
    <string name="load_print_content">载入打印内容…</string>
    <string name="load_record">载入任务</string>
    <string name="save_record">保存任务</string>
    <string name="custom_text">自定义文字</string>
    <string name="date_setting">日期设置</string>
    <string name="tip_last_line">已经是最后一行</string>
    <string name="load_print_content_failed">读取失败</string>
    <string name="resistance_hint">输入850-1455数字</string>
    <string name="tip_resistance_small">电阻值过小</string>
    <string name="tip_resistance_big">电阻值过大</string>
    <string name="small">小</string>
    <string name="medium">中</string>
    <string name="big">大</string>
    <string name="connected">连接成功</string>
    <string name="connect_failed">连接失败</string>
    <string name="disconnection">连接断开</string>
    <string name="scan_qrcode_canceled">扫码取消！</string>
    <string name="unlock">解锁打印机</string>
    <string name="unlock_failed">解锁失败</string>
    <string name="modify_password">修改密码</string>
    <string name="send_successfully">发送成功</string>
    <string name="send_failed">发送失败</string>
    <string name="fill_in_the_password">请输入密码</string>
    <string name="change_password">修改密码</string>
    <string name="new_password">新密码</string>
    <string name="new_password_again">确认新密码</string>
    <string name="confirm_the_change">确认修改</string>
    <string name="password_incorrect_tip">密码有误，请重新输入</string>
    <string name="new_password_illegal_tip">请输入4位数字密码</string>
    <string name="entered_passwords_differ">密码不一致</string>
    <string name="password_changed">密码修改成功</string>
    <string name="change_password_failed">密码修改失败</string>
    <string name="attr_insert_shape">形状</string>
    <string name="attr_insert_line">线条</string>
    <string name="attr_insert_date">日期</string>
    <string name="attr_insert_qr_code">二维码</string>
    <string name="attr_insert_bar_code">条形码</string>
    <string name="attr_insert_text">文本</string>
    <string name="edit_ope_choice_mode_single">单选模式</string>
    <string name="edit_ope_choice_mode_multiple">多选模式</string>
    <string name="edit_label_create">新建标签</string>
    <string name="edit_label_template">标签列表</string>
    <string name="edit_label_save_as_template">保存标签</string>
    <string name="attr_insert_serial_number">流水号</string>
    <string name="open">打开</string>
    <string name="delete">删除</string>
    <string name="forget_pwd_title">找回密码</string>
    <string name="forget_pwd_input_account_hint">请输入手机号</string>
    <string name="forget_pwd_input_verification_code_hint">请输入验证码</string>
    <string name="forget_pwd_send_verification_code">发送验证码</string>
    <string name="forget_pwd_input_new_password_hint">请输入新密码</string>
    <string name="forget_pwd_modify">修改密码</string>
    <string name="login_title">手机号登录</string>
    <string name="login_input_account_hint">请输入手机号</string>
    <string name="login_input_password_hint">请输入密码</string>
    <string name="login_login_now">立即登录</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_register_new_account">注册新账号</string>
    <string name="register_input_account_hint">请输入手机号</string>
    <string name="register_input_verification_code_hint">请输入验证码</string>
    <string name="register_input_password_hint">请输入密码</string>
    <string name="register_input_name_hint">请输入姓名</string>
    <string name="register_input_emil_hint">请输入邮箱号</string>
    <string name="register_input_company_name_hint">请输入公司名称</string>
    <string name="register_register_now">立即注册</string>
    <string name="register_input_user_type_hint">请输入身份类别</string>
    <string name="register_title">注册资料</string>
    <string name="attr_insert_time">时间</string>
    <string name="label">标签</string>
    <string name="insert">插入</string>
    <string name="attribute">属性</string>
    <string name="operate">排版</string>
    <string name="label_name">标签名称</string>
    <string name="content">当前内容</string>
    <string name="format_type">编码模式</string>
    <string name="scale_ratio">放大系数</string>
    <string name="font_size">字体大小</string>
    <string name="text_bold">字体加粗</string>
    <string name="thickness">线条粗细</string>
    <string name="fill_shape">填充图形</string>
    <string name="hint_addend">请输入0–9正整数</string>
    <string name="hint_start_or_end">结束值需大于起始值</string>
    <string name="serial_addend">累加数</string>
    <string name="serial_end">结束值</string>
    <string name="serial_start">起始值</string>
    <string name="default_text">请输入文本内容</string>
    <string name="label_width">标签宽度</string>
    <string name="label_height">标签高度</string>
    <string name="edit_tip_copy">仅在单选模式下可用</string>
    <string name="send_sms_successfully">短信发送成功</string>
    <string name="login_tip_send_sms">请先获取验证码</string>
    <string name="tip_waiting">请稍候...</string>
    <string name="modify_psw_successfully">修改密码成功</string>
    <string name="login_sucessfully">登录成功</string>
</resources>