<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".control.fragment.MainFragment">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="10dp">
        <Button
                android:id="@+id/control"
                android:text="@string/printer_control"
                android:layout_width="242dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal" />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">
        <Button
                android:id="@+id/content"
                android:layout_width="242dp"
                android:layout_height="60dp"
                android:text="@string/print_content"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">
        <Button
                android:id="@+id/disconnect"
                android:layout_width="242dp"
                android:layout_height="60dp"
                android:text="@string/disconnect"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">
        <Button
                android:id="@+id/update"
                android:layout_width="242dp"
                android:layout_height="60dp"
                android:text="@string/dfu"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">
        <Button
                android:id="@+id/passwordModify"
                android:layout_width="242dp"
                android:layout_height="60dp"
                android:text="@string/modify_password"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">
    <Button
            android:id="@+id/unlock"
            android:layout_width="242dp"
            android:layout_height="60dp"
            android:text="@string/unlock"
            android:layout_gravity="center_horizontal"/>
</LinearLayout>
</LinearLayout>