<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
              android:tag="layout/forget_pwd_activity_0" android:fitsSystemWindows="true"
              android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:background="@color/user_interface_bg_color" android:layout_width="match_parent"
                android:layout_height="match_parent" android:overScrollMode="never">
        <LinearLayout android:orientation="vertical" android:focusable="true" android:focusableInTouchMode="true"
                      android:layout_width="match_parent" android:layout_height="wrap_content">
            <EditText android:id="@+id/etAccount" android:background="@drawable/user_input_area_round_shape"
                      android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:layout_marginTop="42dp" android:hint="@string/forget_pwd_input_account_hint"
                      android:inputType="phone"
                      android:layout_marginStart="23dp" android:layout_marginEnd="23dp"
                      style="@style/UserInputAreaTextStyle"/>
            <LinearLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                          android:orientation="horizontal" android:background="@drawable/user_input_area_round_shape"
                          android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:layout_marginTop="24dp" android:layout_marginStart="23dp"
                          android:layout_marginEnd="23dp">
                <EditText android:id="@+id/etVCode"  android:padding="12dp" android:background="@null"
                          android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:hint="@string/forget_pwd_input_verification_code_hint" android:layout_weight="1.0"
                          android:inputType="number|numberSigned|numberDecimal|numberPassword|phone"
                          style="@style/UserInputAreaTextStyle"/>
                <TextView android:id="@+id/tvGetVCode" android:tag="binding_3"
                          android:text="@string/forget_pwd_send_verification_code" android:layout_marginEnd="11dp"
                          style="@style/UserVCodeTextStyle"/>
            </LinearLayout>
            <EditText android:id="@+id/etNewPwd" android:background="@drawable/user_input_area_round_shape"
                      android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:layout_marginTop="24dp" android:hint="@string/forget_pwd_input_new_password_hint"
                      android:inputType="textPassword"
                      android:layout_marginStart="23dp" android:layout_marginEnd="23dp"
                      style="@style/UserInputAreaTextStyle"/>
            <TextView android:id="@+id/tvModifyPwd" android:tag="binding_5" android:layout_marginTop="52dp"
                      android:layout_marginBottom="10dp" android:text="@string/forget_pwd_modify"
                      style="@style/UserButtonTextStyle"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
