<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout
            android:id="@+id/modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="10dp"
                    android:text="@string/change_password"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

        </LinearLayout>
        <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                android:inputType="numberPassword"
                android:padding="14dp"
                android:textColor="#333333"
                android:maxLength="4"
                android:hint="@string/new_password"
                android:textSize="16sp" />
        <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                android:inputType="numberPassword"
                android:padding="14dp"
                android:textColor="#333333"
                android:maxLength="4"
                android:hint="@string/new_password_again"
                android:textSize="16sp" />
        <Button
                android:id="@+id/confirmModify"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:text="@string/confirm_the_change"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <include
            layout="@layout/layout_keyboardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"/>

</RelativeLayout>