<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">
    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:layout_marginTop="20dp"
                  android:paddingHorizontal="0dp"
                  android:layout_marginHorizontal="0dp">
        <cn.westlan.coding.core.panel.EditorPanel
                android:id="@+id/contentThumb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
            <com.google.android.material.chip.ChipGroup
                    android:id="@+id/recordGroup"
                    app:singleLine="false"
                    app:singleSelection="true"
                    app:chipSpacingHorizontal="20dp"
                    app:chipSpacingVertical="2dp"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                <com.google.android.material.chip.Chip
                        android:id="@+id/record1"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/record01"
                        android:textAppearance="?android:textAppearanceMedium"/>
                <com.google.android.material.chip.Chip
                        android:id="@+id/record2"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/record02"
                        android:textAppearance="?android:textAppearanceMedium"/>
                <com.google.android.material.chip.Chip
                        android:id="@+id/record3"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/record03"
                        android:textAppearance="?android:textAppearanceMedium"/>
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
            <Button
                    android:id="@+id/recordCancel"
                    android:text="@string/cancel"
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/recordConfirm"
                    android:text="@string/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>