<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
        <TextView
                android:text="@string/date_format"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="24sp"/>
        <cn.forward.androids.views.StringScrollPicker
                android:id="@+id/fixedPattern"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:spv_disallow_intercept_touch="true"
                app:spv_is_circulation="false"
                app:spv_max_text_size="20sp"
                app:spv_min_text_size="16sp"
                app:spv_orientation="vertical"
                app:spv_alignment="center"
                app:spv_visible_item_count="3"
        />

<!--        <androidx.appcompat.widget.AppCompatSpinner-->
<!--                android:id="@+id/fixedPattern"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:entries="@array/datePattern">-->
<!--        </androidx.appcompat.widget.AppCompatSpinner>-->
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
        <TextView
                android:text="@string/date_specify"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="24sp"/>
<!--        <DatePicker-->
<!--                android:id="@+id/fixedDate"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="100dp"-->
<!--                android:layout_weight="1"-->
<!--                android:calendarViewShown = 'false'/>-->
        <FrameLayout
                android:id="@+id/fixedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
        <Button
                android:id="@+id/fixedCancel"
                android:text="@string/cancel"
                android:layout_marginRight="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/fixedConfirm"
                android:text="@string/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>